fix cart alignment

--- a/src/styles/pages/home.scss
+++ b/src/styles/pages/home.scss
@@ -341,7 +341,7 @@
                     border-radius: 50%;
                     position: absolute;
                     left: 50%;
-                    margin-left: -11.5px;
+                    margin-left: -13.5px;
                     bottom: -12px;
                     z-index: 1;
                     cursor: pointer;
